// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLink renders an external link correctly 1`] = `
<div>
  <a
    class=""
    dir="auto"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    testText
  </a>
</div>
`;

exports[`ExternalLink renders an external link with a title 1`] = `
<div>
  <a
    class=""
    dir="auto"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
    title="testTitle"
  >
    testText
  </a>
</div>
`;

exports[`ExternalLink renders an external link with additional className 1`] = `
<div>
  <a
    class="testClass"
    dir="auto"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    testText
  </a>
</div>
`;

exports[`ExternalLink renders an external link with an icon 1`] = `
<div>
  <a
    class=""
    dir="auto"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    BootstrapIconMock_Heart
     
    testText
  </a>
</div>
`;

exports[`ExternalLink renders an external link with an id 1`] = `
<div>
  <a
    class=""
    dir="auto"
    href="https://example.com"
    id="testId"
    rel="noopener noreferrer"
    target="_blank"
  >
    testText
  </a>
</div>
`;
